--- a/css/main_1000.css
+++ b/css/main_1000.css
@@ -25,12 +25,14 @@ a {
 
 #wrap>div {
     width: 100%;
-    height: 130vh
+    height: 250vh;
 }
 
 #wrap>div:nth-child(1) {
     /* main */
     /* background: url(../images/main3.png) no-repeat; */
+    width: 100%;
+    height: 110vh;
     background-size: 100% 100%;
 }
 
@@ -51,8 +53,8 @@ a {
 
 #wrap>div>div {
     margin: 0 auto;
-    width: 1500px;
-    height: 130vh;
+    width: 98%;
+    height: 250vh;
     /* background-color:rgba(255, 244, 146, 0.5); */
 }
 
@@ -132,7 +134,7 @@ a {
     color: white;
     top: 400px;
     bottom: 0;
-    left: 400px;
+    left: 0px;
     right: 0;
     margin: auto;
     text-shadow: 3px 3px 10px #ccc;
@@ -251,7 +253,9 @@ a {
 .in_profile .info {
     width: 100%;
     float: left;
-    box-shadow: 3px 0px 12px #000;
+    box-shadow: none;
+    display: flex;
+    flex-direction: column;
 }
 
 .in_profile h1 {
@@ -265,8 +269,8 @@ a {
 }
 
 .in_profile .info_img {
-    width: 800px;
-    height: 870px;
+    width: 100%;
+    height: 1000px;
     /* background-color: #765285; */
     background: linear-gradient(to right top, #861657, #765285);
     float: left;
@@ -279,13 +283,12 @@ a {
 
 
 
-
-
 .in_profile .info_text {
-    width: 700px;
+    width: 100%;
     height: 870px;
     background: linear-gradient(to right bottom, #ffc508, #b48a03);
     float: left;
+    border-radius: 0 0 15px 15px;
 }
 
 .in_profile .info_text>ul {
@@ -336,41 +339,52 @@ a {
     cursor: pointer;
 }
 
-
 .icon_box>li>.icon_text1 {
+    text-align: center;
     position: absolute;
-    left: 33px;
+    left: 0px;
     top: 55px;
+    width: 16vw;
 }
 
 .icon_box>li>.icon_text2 {
+    text-align: center;
     position: absolute;
-    left: 41px;
+    left: 0px;
     top: 55px;
+    width: 16vw;
 }
 
 .icon_box>li>.icon_text3 {
+    text-align: center;
     position: absolute;
-    left: 20px;
+    left: 0px;
     top: 55px;
+    width: 16vw;
 }
 
 .icon_box>li>.icon_text4 {
+    text-align: center;
     position: absolute;
-    left: 48px;
+    left: 0px;
     top: 55px;
+    width: 16vw;
 }
 
 .icon_box>li>.icon_text5 {
+    text-align: center;
     position: absolute;
-    left: 28px;
+    left: 0px;
     top: 55px;
+    width: 16vw;
 }
 
 .icon_box>li>.icon_text6 {
+    text-align: center;
     position: absolute;
-    left: 44px;
+    left: 0px;
     top: 55px;
+    width: 16vw;
 }
 
 .icon_box>li>img {
@@ -412,6 +426,7 @@ a {
     background: linear-gradient(to right top, #efc32fda, #ffa69e);
     border: 10px solid rgba(255, 0, 0, 0.875);
     box-shadow: 0px 1px 30px #ccc;
+    display: none;
 }
 
 #q_mn ul.nav {
@@ -443,14 +458,18 @@ a {
 
 #project_1 .list {
     width: 100%;
-    height: 1200px;
+    height: 2400px;
     background-color: #e8e8e8;
     border-radius: 30px;
     float: left;
+    display: flex;
+    flex-direction: column;
 }
 
 #project_1 .list>ul {
     float: left;
+    display: flex;
+    justify-content: center;
 }
 
 #project_1 .list>h1 {
@@ -465,14 +484,14 @@ a {
 
 #project_1 .list>ul>li {
     display: inline-block;
-    width: 350px;
+    width: 40vw;
     height: 500px;
     border: 3px solid hotpink;
     border-radius: 5px;
     box-shadow: 1px 1px 10px #1b1b1b;
     box-sizing: border-box;
     overflow: hidden;
-    margin: 40px 20px 0 50px;
+    margin: 40px 10vw 0 10vw;
 }
 
 #project_1 .list>ul>.list_none {
@@ -480,7 +499,7 @@ a {
     background-color: #fff;
     border: none;
     border-radius: 10px;
-    width: 300px;
+    width: 40vw;
     margin-left: -10px;
     padding: 20px 10px 10px 20px;
     box-sizing: border-box;
@@ -505,7 +524,7 @@ a {
 }
 
 #project_1 .list>ul>li>a>img {
-    width: 350px;
+    width: 40vw;
     height: 500px;
 }
 
