--- a/css/main_1520.css
+++ b/css/main_1520.css
@@ -51,7 +51,7 @@ a {
 
 #wrap>div>div {
     margin: 0 auto;
-    width: 1500px;
+    width: 98%;
     height: 130vh;
     /* background-color:rgba(255, 244, 146, 0.5); */
 }
@@ -132,7 +132,7 @@ a {
     color: white;
     top: 400px;
     bottom: 0;
-    left: 400px;
+    left: 200px;
     right: 0;
     margin: auto;
     text-shadow: 3px 3px 10px #ccc;
@@ -265,7 +265,7 @@ a {
 }
 
 .in_profile .info_img {
-    width: 800px;
+    width: 50%;
     height: 870px;
     /* background-color: #765285; */
     background: linear-gradient(to right top, #861657, #765285);
@@ -279,10 +279,8 @@ a {
 
 
 
-
-
 .in_profile .info_text {
-    width: 700px;
+    width: 50%;
     height: 870px;
     background: linear-gradient(to right bottom, #ffc508, #b48a03);
     float: left;
@@ -336,41 +334,52 @@ a {
     cursor: pointer;
 }
 
-
 .icon_box>li>.icon_text1 {
+    text-align: center;
     position: absolute;
-    left: 33px;
+    left: 0px;
     top: 55px;
+    width: 8vw;
 }
 
 .icon_box>li>.icon_text2 {
+    text-align: center;
     position: absolute;
-    left: 41px;
+    left: 0px;
     top: 55px;
+    width: 8vw;
 }
 
 .icon_box>li>.icon_text3 {
+    text-align: center;
     position: absolute;
-    left: 20px;
+    left: 0px;
     top: 55px;
+    width: 8vw;
 }
 
 .icon_box>li>.icon_text4 {
+    text-align: center;
     position: absolute;
-    left: 48px;
+    left: 0px;
     top: 55px;
+    width: 8vw;
 }
 
 .icon_box>li>.icon_text5 {
+    text-align: center;
     position: absolute;
-    left: 28px;
+    left: 0px;
     top: 55px;
+    width: 8vw;
 }
 
 .icon_box>li>.icon_text6 {
+    text-align: center;
     position: absolute;
-    left: 44px;
+    left: 0px;
     top: 55px;
+    width: 8vw;
 }
 
 .icon_box>li>img {
@@ -465,14 +474,14 @@ a {
 
 #project_1 .list>ul>li {
     display: inline-block;
-    width: 350px;
+    width: 23vw;
     height: 500px;
     border: 3px solid hotpink;
     border-radius: 5px;
     box-shadow: 1px 1px 10px #1b1b1b;
     box-sizing: border-box;
     overflow: hidden;
-    margin: 40px 20px 0 50px;
+    margin: 40px 0.5vw 0 1vw;
 }
 
 #project_1 .list>ul>.list_none {
@@ -480,7 +489,7 @@ a {
     background-color: #fff;
     border: none;
     border-radius: 10px;
-    width: 300px;
+    width: 23vw;
     margin-left: -10px;
     padding: 20px 10px 10px 20px;
     box-sizing: border-box;
@@ -505,7 +514,7 @@ a {
 }
 
 #project_1 .list>ul>li>a>img {
-    width: 350px;
+    width: 23vw;
     height: 500px;
 }
 
