--- a/css/main_780.css
+++ b/css/main_780.css
@@ -25,12 +25,14 @@ a {
 
 #wrap>div {
     width: 100%;
-    height: 130vh
+    height: 200vh;
 }
 
 #wrap>div:nth-child(1) {
     /* main */
     /* background: url(../images/main3.png) no-repeat; */
+    width: 100%;
+    height: 110vh;
     background-size: 100% 100%;
 }
 
@@ -51,8 +53,8 @@ a {
 
 #wrap>div>div {
     margin: 0 auto;
-    width: 1500px;
-    height: 130vh;
+    width: 98%;
+    height: 250vh;
     /* background-color:rgba(255, 244, 146, 0.5); */
 }
 
@@ -105,7 +107,7 @@ a {
     left: 50%;
     top: 300px;
     font-family: 'Montserrat', Arial, sans-serif;
-    font-size: calc(20px + 5vw);
+    font-size: calc(20px + 4vw);
     font-weight: 700;
     color: #fff;
     letter-spacing: 0.02em;
@@ -123,16 +125,16 @@ a {
 
 .console-container {
     font-family: Khula;
-    font-size: 4em;
+    font-size: 3em;
     text-align: center;
     height: 200px;
-    width: 700px;
+    width: 500px;
     display: block;
     position: absolute;
     color: white;
     top: 400px;
     bottom: 0;
-    left: 400px;
+    left: 0px;
     right: 0;
     margin: auto;
     text-shadow: 3px 3px 10px #ccc;
@@ -251,7 +253,8 @@ a {
 .in_profile .info {
     width: 100%;
     float: left;
-    box-shadow: 3px 0px 12px #000;
+    display: flex;
+    flex-direction: column;
 }
 
 .in_profile h1 {
@@ -265,8 +268,8 @@ a {
 }
 
 .in_profile .info_img {
-    width: 800px;
-    height: 870px;
+    width: 100%;
+    height: 750px;
     /* background-color: #765285; */
     background: linear-gradient(to right top, #861657, #765285);
     float: left;
@@ -279,11 +282,9 @@ a {
 
 
 
-
-
 .in_profile .info_text {
-    width: 700px;
-    height: 870px;
+    width: 100%;
+    height: 750px;
     background: linear-gradient(to right bottom, #ffc508, #b48a03);
     float: left;
 }
@@ -336,41 +337,52 @@ a {
     cursor: pointer;
 }
 
-
 .icon_box>li>.icon_text1 {
+    text-align: center;
     position: absolute;
-    left: 33px;
+    left: 0px;
     top: 55px;
+    width: 16vw;
 }
 
 .icon_box>li>.icon_text2 {
+    text-align: center;
     position: absolute;
-    left: 41px;
+    left: 0px;
     top: 55px;
+    width: 16vw;
 }
 
 .icon_box>li>.icon_text3 {
+    text-align: center;
     position: absolute;
-    left: 20px;
+    left: 0px;
     top: 55px;
+    width: 16vw;
 }
 
 .icon_box>li>.icon_text4 {
+    text-align: center;
     position: absolute;
-    left: 48px;
+    left: 0px;
     top: 55px;
+    width: 16vw;
 }
 
 .icon_box>li>.icon_text5 {
+    text-align: center;
     position: absolute;
-    left: 28px;
+    left: 0px;
     top: 55px;
+    width: 16vw;
 }
 
 .icon_box>li>.icon_text6 {
+    text-align: center;
     position: absolute;
-    left: 44px;
+    left: 0px;
     top: 55px;
+    width: 16vw;
 }
 
 .icon_box>li>img {
@@ -443,14 +455,18 @@ a {
 
 #project_1 .list {
     width: 100%;
-    height: 1200px;
+    height: 1900px;
     background-color: #e8e8e8;
     border-radius: 30px;
     float: left;
+    display: flex;
+    flex-direction: column;
 }
 
 #project_1 .list>ul {
     float: left;
+    display: flex;
+    justify-content: center;
 }
 
 #project_1 .list>h1 {
@@ -465,14 +481,14 @@ a {
 
 #project_1 .list>ul>li {
     display: inline-block;
-    width: 350px;
-    height: 500px;
+    width: 40vw;
+    height: 410px;
     border: 3px solid hotpink;
     border-radius: 5px;
     box-shadow: 1px 1px 10px #1b1b1b;
     box-sizing: border-box;
     overflow: hidden;
-    margin: 40px 20px 0 50px;
+    margin: 40px 10vw 0 10vw;
 }
 
 #project_1 .list>ul>.list_none {
@@ -480,7 +496,7 @@ a {
     background-color: #fff;
     border: none;
     border-radius: 10px;
-    width: 300px;
+    width: 40vw;
     margin-left: -10px;
     padding: 20px 10px 10px 20px;
     box-sizing: border-box;
@@ -505,8 +521,8 @@ a {
 }
 
 #project_1 .list>ul>li>a>img {
-    width: 350px;
-    height: 500px;
+    width: 40vw;
+    height: 410px;
 }
 
 #project_1 .list>ul>li:hover {
